# athena-godot

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  build-rockpi.sh  build.sh  headless-test.sh
ci/debian12/: Dockerfile
cmake/: package-runtime.cmake  stage-runtime-deps.cmake
cmake/provision/: CMakeLists.txt  patch-depthai-v229.cmake  verify-provisioned-deps.cmake
cmake/toolchains/: debian12-aarch64.cmake  debian12-x86_64.cmake  linux-aarch64-clang.cmake  rockpi-aarch64-local.cmake
include/athena_godot/: athena_device.h
project/: project.godot
project/debug/: athena_debug.gd  athena_debug.gd.uid  athena_debug.tscn
project/samples/: video_streams_debug.gd  video_streams_debug.gd.uid  video_streams_debug.tscn
project/tests/: headless_smoke.gd  headless_smoke.gd.uid
scripts/: build-in-debian12.sh  build-plugin.sh  build-rockpi-plugin.sh  check-abi.sh  deploy.sh  provision-deps.sh  test-headless-hardware.sh
src/: athena_device.cpp  register_types.cpp  register_types.h
tools/: bootstrap-debian12-sysroot.sh  bootstrap-godot-cpp.sh  bootstrap-rockpi-sysroot.sh  package-addon.sh  package-rockpi.sh
